# whisper-transcript

./: README.md  pyproject.toml  transcribe_video.py
src/transcript/: transcribe_video.py
